# sevastolink-galley-archive

./: .env.example  .gitignore  .impeccable.md  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  skills-lock.json
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/ai/: base.py  evaluator.py  lm_studio_client.py  metadata_suggester.py  normalizer.py  pantry_suggester.py  rewriter.py  similarity_engine.py
apps/api/src/config/: logging_config.py  settings.py
apps/api/src/db/: database.py  fts_sync.py  init_db.py
apps/api/src/db/migrations/: 001_initial_schema.rollback.sql  001_initial_schema.sql  002_add_recipe_cover_media.rollback.sql  002_add_recipe_cover_media.sql  003_intake_jobs_source_notes.rollback.sql  (+3 more)
apps/api/src/models/: __init__.py  intake.py  media.py  recipe.py  settings.py
apps/api/src/routes/: health.py  intake.py  media.py  pantry.py  recipes.py  settings.py
apps/api/src/schemas/: ai_outputs.py  common.py  ingredient_families.py  intake.py  media_schema.py  recipe.py  settings_schema.py  taxonomy.py
apps/api/src/services/: intake_service.py  media_service.py  recipe_service.py  settings_service.py
apps/api/src/utils/: ids.py  slugify.py  time_utils.py
apps/api/tests/: conftest.py  test_ai_evaluation.py  test_ai_metadata.py  test_ai_normalizer_unit.py  test_ai_pantry.py  test_ai_rewrite.py  test_ai_similarity.py  test_batch_intake.py  test_error_envelope.py  test_health.py  test_intake.py  test_media.py  test_prompt_registry.py  test_recipes.py  test_settings.py  test_slugify.py
(+206 files in other folders)
